<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="165dp"    
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button"
        android:layout_marginTop="20dp"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_add" />

     <ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="300dp" >
    
	    <TableLayout
	        android:id="@+id/Table"
	        android:layout_marginTop="20dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	    </TableLayout>
	    
	 </ScrollView>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="240dp"
        android:text="@string/list_logout" />

</TableLayout>